<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.smallrye</groupId>
        <artifactId>smallrye-parent</artifactId>
        <version>31</version>
    </parent>

    <artifactId>smallrye-graphql-parent</artifactId>
    <version>1.3.3-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>SmallRye: GraphQL Parent</name>
    <url>http://smallrye.io</url>

    <properties>
        <version.eclipse.microprofile.config>2.0</version.eclipse.microprofile.config>
        <version.eclipse.microprofile.graphql>1.1.0</version.eclipse.microprofile.graphql>
<!--        <version.eclipse.microprofile.graphql-client>1.1-SNAPSHOT</version.eclipse.microprofile.graphql-client>-->
        <version.eclipse.microprofile.metrics>3.0</version.eclipse.microprofile.metrics>
        <version.eclipse.microprofile.context-propagation>1.2</version.eclipse.microprofile.context-propagation>
        <version.smallrye-config>2.4.4</version.smallrye-config>
        <version.smallrye.metrics>3.0.3</version.smallrye.metrics>
        <version.smallrye-common>1.6.0</version.smallrye-common>
        <version.smallrye-mutiny>1.0.0</version.smallrye-mutiny>
        <version.smallrye-context-propagation>1.2.1</version.smallrye-context-propagation>
        <version.opentracing>0.33.0</version.opentracing>
        <version.yasson>1.0.8</version.yasson>
        <version.jakarta-validation>2.0.2</version.jakarta-validation>
        <version.graphql-java>17.2</version.graphql-java>
        <verison.io.micrometer>1.7.3</verison.io.micrometer>
        <version.vertx>4.1.3</version.vertx>

        <!-- Test -->
        <version.arquillian.jetty>1.0.0.CR3</version.arquillian.jetty>
        <version.jetty>9.4.43.v20210629</version.jetty>
        <version.smallrye-opentracing>2.0.1</version.smallrye-opentracing>
        <version.hibernate-validator>6.2.0.Final</version.hibernate-validator>
        <version.glasfish-el>3.0.3</version.glasfish-el>
        <version.mockito>3.12.4</version.mockito>

        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/tck/target/site/jacoco-aggregate/jacoco.xml,${project.basedir}/../tck/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <slf4j-jboss-logging.version>1.2.1.Final</slf4j-jboss-logging.version>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/smallrye/smallrye-graphql/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git@github.com:smallrye/smallrye-graphql.git</connection>
        <developerConnection>scm:git:git@github.com:smallrye/smallrye-graphql.git</developerConnection>
        <url>https://github.com/smallrye/smallrye-graphql/</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>ui</module>
        <module>common</module>
        <module>server</module>
        <module>client</module>
        <module>tools</module>
        <module>power-annotations</module>
    </modules>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.microprofile.graphql</groupId>
                <artifactId>microprofile-graphql-api</artifactId>
                <version>${version.eclipse.microprofile.graphql}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.osgi</groupId>
                        <artifactId>org.osgi.annotation.versioning</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- Client API is copied into SmallRye for now -->
           <!-- <dependency>
                <groupId>org.eclipse.microprofile.graphql</groupId>
                <artifactId>microprofile-graphql-client-api</artifactId>
                <version>${version.eclipse.microprofile.graphql-client}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.microprofile.graphql</groupId>
                <artifactId>microprofile-graphql-client-tck</artifactId>
                <version>${version.eclipse.microprofile.graphql-client}</version>
            </dependency>
            -->
            <dependency>
                <groupId>org.eclipse.microprofile.graphql</groupId>
                <artifactId>microprofile-graphql-tck</artifactId>
                <version>${version.eclipse.microprofile.graphql}</version>
            </dependency>
            
            <dependency>
                <groupId>org.eclipse.microprofile.graphql</groupId>
                <artifactId>microprofile-graphql-server-tck</artifactId>
                <version>${version.eclipse.microprofile.graphql}</version>
            </dependency>
            
            <dependency>
                <groupId>org.eclipse.microprofile.config</groupId>
                <artifactId>microprofile-config-api</artifactId>
                <version>${version.eclipse.microprofile.config}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.microprofile.metrics</groupId>
                <artifactId>microprofile-metrics-api</artifactId>
                <version>${version.eclipse.microprofile.metrics}</version>
            </dependency>
            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-metrics</artifactId>
                <version>${version.smallrye.metrics}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-core</artifactId>
                <version>${verison.io.micrometer}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.microprofile.context-propagation</groupId>
                <artifactId>microprofile-context-propagation-api</artifactId>
                <version>${version.eclipse.microprofile.context-propagation}</version>
            </dependency>

            <!-- OpenTracing -->
            <dependency>
                <groupId>io.opentracing</groupId>
                <artifactId>opentracing-api</artifactId>
                <version>${version.opentracing}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse</groupId>
                <artifactId>yasson</artifactId>
                <version>${version.yasson}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye.common</groupId>
                <artifactId>smallrye-common-annotation</artifactId>
                <version>${version.smallrye-common}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye.config</groupId>
                <artifactId>smallrye-config</artifactId>
                <version>${version.smallrye-config}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye.reactive</groupId>
                <artifactId>mutiny</artifactId>
                <version>${version.smallrye-mutiny}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye.reactive</groupId>
                <artifactId>mutiny-smallrye-context-propagation</artifactId>
                <version>${version.smallrye-mutiny}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-context-propagation</artifactId>
                <version>${version.smallrye-context-propagation}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-context-propagation-cdi</artifactId>
                <version>${version.smallrye-context-propagation}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${version.jakarta-validation}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.graphql-java</groupId>
                <artifactId>graphql-java</artifactId>
                <version>${version.graphql-java}</version>
            </dependency>

            <dependency>
                <groupId>io.vertx</groupId>
                <artifactId>vertx-web-client</artifactId>
                <version>${version.vertx}</version>
            </dependency>
            
            <!-- Dependencies provided by the project -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-ui-graphiql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-schema-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-schema-builder</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-cdi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-servlet</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-tck</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-client-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-client-tck</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-client-implementation-vertx</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>smallrye-graphql-client-implementation-jaxrs</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Tests -->
            <dependency>
                <groupId>org.jboss.slf4j</groupId>
                <artifactId>slf4j-jboss-logging</artifactId>
                <version>${slf4j-jboss-logging.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.arquillian.container</groupId>
                <artifactId>arquillian-jetty-embedded-9</artifactId>
                <version>${version.arquillian.jetty}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-bom</artifactId>
                <version>${version.jetty}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty.websocket</groupId>
                <artifactId>javax-websocket-client-impl</artifactId>
                <version>${version.jetty}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty.websocket</groupId>
                <artifactId>javax-websocket-server-impl</artifactId>
                <version>${version.jetty}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.servlet</groupId>
                <artifactId>weld-servlet-core</artifactId>
                <version>${version.weld.core}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.opentracing</groupId>
                <artifactId>opentracing-mock</artifactId>
                <version>${version.opentracing}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.smallrye</groupId>
                <artifactId>smallrye-opentracing</artifactId>
                <version>${version.smallrye-opentracing}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${version.hibernate-validator}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>jakarta.el</artifactId>
                <version>${version.glasfish-el}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${version.release.plugin}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                    <preparationGoals>verify</preparationGoals>
                    <pushChanges>false</pushChanges>
                    <localCheckout>true</localCheckout>
                    <remoteTagging>false</remoteTagging>
                    <!--suppress MavenModelInspection -->
                    <arguments>-DskipTests ${release.arguments}</arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${version.gpg.plugin}</version>
                <configuration>
                    <gpgArguments>
                        <arg>--pinentry-mode</arg>
                        <arg>loopback</arg>
                    </gpgArguments>
                </configuration>
            </plugin>         
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>!release.maven.bug.always.be.active</name>
                </property>
            </activation>
            <modules>
                <module>release</module>
            </modules>
        </profile>
        
        <profile>
            <id>jdk11plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.3.0</version>
                        <configuration>
                            <doclet>nl.talsmasoftware.umldoclet.UMLDoclet</doclet>
                            <docletArtifact>
                                <groupId>nl.talsmasoftware</groupId>
                                <artifactId>umldoclet</artifactId>
                                <version>2.0.12</version>
                            </docletArtifact>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
